--- a/src/components/Statistics/Statistic.module.css
+++ b/src/components/Statistics/Statistic.module.css
@@ -22,6 +22,7 @@
   padding-right: 15px;
 
   border: 1px solid black;
+  background-color: rgba(167, 206, 240, 0.923);
 }
 .span {
   margin-top: 5px;
